# PicoAPRS-Firmware

./: .gitignore  .project  CMakeLists.txt  CMakePresets.json  PicoAPRS-Firmware.ioc  README.md  build.ninja  gdb_commands.txt  stm32l4.cfg
.metadata/: .log4j2.xml  version.ini
.metadata/.plugins/org.eclipse.core.resources/.root/: 1.tree
.metadata/.plugins/org.eclipse.core.resources/.safetable/: org.eclipse.core.resources
.metadata/.plugins/org.eclipse.e4.workbench/: workbench.xmi
.metadata/.plugins/org.eclipse.ui.workbench/: workingsets.xml
Config/: target_config.h
Config/Inc/: feature_config.h  project_config.h  target_config.h
CubeMX/: .mxproject  CubeMX.ioc
CubeMX/Inc/: main.h  stm32u0xx_hal_conf.h  stm32u0xx_it.h  tim.h
CubeMX/Src/: gpio.c  main.c  rtc.c  spi.c  stm32u0xx_it.c  tim.c
CubeMX/cmake/: gcc-arm-none-eabi.cmake
CubeMX/cmake/stm32cubemx/: CMakeLists.txt
Sensors/Inc/: u-blox_Class_and_ID.h  u-blox_gnss_MAX-M10S.h
Sensors/Src/: u-blox_gnss_MAX-M10S.c
Src/: main.c
Src/Sensors/Inc/: u-blox_gnss_MAX-M10S.h
cmake/: README.md  project_config.cmake  test_config.cmake  test_template.cmake
cmake/presets/: base-presets.json  l432kc-presets.json
docs/: contributing.md
docs/drivers/: max-m10s.md
libs/: CMakeLists.txt  cmake_install.cmake
libs/aprs/: CMakeLists.txt
libs/aprs/Inc/: aprs.h
libs/aprs/Src/: aprs.c
libs/ax25/: CMakeLists.txt
libs/ax25/Inc/: ax25.h
libs/ax25/Src/: ax25.c
libs/bme68x/: CMakeLists.txt  bme68x.md  cmake_install.cmake
libs/bme68x/Inc/: bme68x.h  bme68x_defs.h  bme68x_driver.h  bme68x_types.h
libs/bme68x/Src/: bme68x.c  bme68x_driver.c
libs/bme68x_test/: CMakeLists.txt  bme68x.md
libs/bme68x_test/Inc/: bme68x_driver.h
libs/bme68x_test/Src/: bme68x_driver.c
libs/bmv080/: CMakeLists.txt  bmv080.md
libs/bmv080/Inc/: bmv080_defs.h  bmv080_driver.h  bmv080_example.h
libs/bmv080/Src/: bmv080_driver.c  bmv080_example.c
libs/common/: CMakeLists.txt  cmake_install.cmake
libs/common/Inc/: error_types.h  logger.h  logging.h
libs/common/Src/: logging.c
libs/gps/: CMakeLists.txt
libs/gps/Inc/: u-blox_Class_and_ID.h  u-blox_gnss_MAX-M10S.h  u-blox_packet_handler.h  u-blox_packet_types.h  u-blox_types.h  u-blox_ubx_protocol.h
libs/gps/Inc/core/: gps_types.h
libs/gps/Inc/driver/: max_m10s.h
libs/gps/Inc/protocols/ubx/: ubx_defs.h  ubx_protocol.h  ubx_types.h
libs/gps/Src/: u-blox_gnss_MAX-M10S.c  u-blox_packet_handler.c
libs/gps/Src/driver/: max_m10s.c
libs/gps/Src/protocols/ubx/: ubx_packet_handler.c  ubx_protocol.c
libs/gps/blocking/: CMakeLists.txt  max-m10s-blocking.md
libs/gps/blocking/Inc/core/: gps_types.h
libs/gps/blocking/Inc/driver/: max_m10s.h
libs/gps/blocking/Inc/protocols/ubx/: ubx_packet_handler.h  ubx_protocol.h
libs/gps/blocking/Src/driver/: max_m10s.c
libs/gps/blocking/Src/protocols/ubx/: ubx_packet_handler.c  ubx_protocol.c
libs/gps/legacy/: CMakeLists.txt
libs/gps/legacy/Inc/core/: gps_types.h
libs/gps/legacy/Inc/driver/: max_m10s.h
libs/gps/legacy/Inc/protocols/ubx/: ubx_types.h
libs/gps/legacy/Src/protocols/ubx/: ubx_protocol.c
libs/gps/non-blocking/: CMakeLists.txt  max-m10s-nonblocking.md
libs/gps/non-blocking/Inc/core/: gps_types.h  hal_interface.h
libs/gps/non-blocking/Inc/driver/: max_m10s.h
libs/gps/non-blocking/Inc/protocols/ubx/: ubx.h  ubx_types.h
libs/gps/non-blocking/Src/core/: hal_interface.c
libs/gps/non-blocking/Src/driver/: max_m10s.c
libs/gps/non-blocking/Src/protocols/ubx/: ubx.c
libs/sensors/: CMakeLists.txt
libs/sensors/Inc/: bme688.h
libs/sensors/Src/: bme688.c
libs/si4463/: CMakeLists.txt
libs/si4463/Inc/: si_trx.h  si_trx_defs.h
libs/si4463/Src/: si_trx.c
targets/stm32L4xx/L432KC/: .mxproject  CMakeLists.txt  L432KC.ioc  pico-L432KC.ioc
targets/stm32L4xx/L432KC/Inc/: main.h  stm32l4xx_hal_conf.h  stm32l4xx_it.h
targets/stm32L4xx/L432KC/Src/: i2c.c  main.c  stm32l4xx_hal_msp.c  stm32l4xx_it.c  tim.c  usart.c
targets/stm32L4xx/L432KC/cmake/: gcc-arm-none-eabi.cmake
targets/stm32L4xx/L476RG/: .mxproject  CMakeLists.txt  L476RG.ioc
targets/stm32L4xx/L476RG/Inc/: main.h  stm32l4xx_hal_conf.h  stm32l4xx_it.h  tim.h
targets/stm32L4xx/L476RG/Src/: i2c.c  main.c  stm32l4xx_it.c  tim.c
targets/stm32L4xx/L476RG/cmake/: gcc-arm-none-eabi.cmake
targets/stm32U0xx/U073KCU6/: .mxproject  CMakeLists.txt  integrated_stm32u073kc.ioc  stm32u073kcux_flash.ld
targets/stm32U0xx/U073KCU6/Inc/: main.h  stm32u0xx_hal_conf.h  stm32u0xx_it.h  tim.h
targets/stm32U0xx/U073KCU6/Src/: dac.c  gpio.c  i2c.c  main.c  spi.c  stm32u0xx_it.c  tim.c  usart.c
targets/stm32U0xx/U073KCU6/cmake/: gcc-arm-none-eabi.cmake
targets/stm32U0xx/U083/: CubeMX.ioc
targets/stm32U0xx/U083/Inc/: stm32u0xx_it.h
targets/stm32U0xx/U083/Src/: adc.c  stm32u0xx_hal_msp.c
targets/stm32U0xx/U083RC/: .mxproject  CMakeLists.txt  U083RC.ioc
targets/stmU0xx/U073/: .mxproject  CMakeLists.txt  U073KCU6.ioc
targets/stmU0xx/U083/: CMakeLists.txt  U083RC.ioc
test/: test.ioc
tests/gps_simple_test/: test_gps.c
tests/integrated_stm32u073kc/: .mxproject
tests/integrated_stop2_test/: CMakeLists.txt  integrated_stop2_test.c
tests/integration_test/: CMakeLists.txt  integration_test.c  integration_test2.c  integration_testOld.c  test_integration.c
tests/integration_test/.metadata/: .log4j2.xml  version.ini
tests/test_SI/: CMakeLists.txt  CMakePresets.json
tests/test_aprs/: CMakeLists.txt  test_aprs.c
tests/test_bme688/: CMakeLists.txt  CMakePresets.json  test_bme688.c
tests/test_bmv080/: CMakeLists.txt  test_bmv080.c
tests/test_gps/: CMakeLists.txt  CMakePresets.json  test_gps.c  test_gps.h
tests/test_gps_nb/: CMakeLists.txt  CMakePresets.json  test_gps_nb.c
tests/test_i2c/: CMakeLists.txt  CMakePresets.json  aprs.c  test_i2c.c
tests/test_integration/: test_integration.c
tests/test_si4463/: CMakeLists.txt  test_si4463.c
tests/test_standby_adc/updated_u0_shutdown/: .mxproject  CMakeCache.txt  CMakeLists.txt  build.ninja  cmake_install.cmake  compile_commands.json  updated_u0_shutdown.ioc
(+40 files in other folders)
